--- a/builds/production/css/style.css
+++ b/builds/production/css/style.css
@@ -1221,7 +1221,7 @@ a:hover {
     opacity: 0;
   }
 }
-/* line 65, ../../../components/sass/_base.scss */
+/* line 64, ../../../components/sass/_base.scss */
 .animation {
   width: 100%;
   height: 100%;
@@ -1236,7 +1236,7 @@ a:hover {
   z-index: 10;
 }
 
-/* line 79, ../../../components/sass/_base.scss */
+/* line 78, ../../../components/sass/_base.scss */
 .animation img {
   margin-left: auto;
   margin-right: auto;
@@ -1244,113 +1244,113 @@ a:hover {
   margin-top: 15%;
 }
 @media (min-width: 320px) and (max-width: 479px) {
-  /* line 79, ../../../components/sass/_base.scss */
+  /* line 78, ../../../components/sass/_base.scss */
   .animation img {
     margin-top: 17%;
     width: 70%;
   }
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 79, ../../../components/sass/_base.scss */
+  /* line 78, ../../../components/sass/_base.scss */
   .animation img {
     margin-top: 17%;
     width: 70%;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 79, ../../../components/sass/_base.scss */
+  /* line 78, ../../../components/sass/_base.scss */
   .animation img {
     margin-top: 17%;
     width: 50%;
   }
 }
 
-/* line 102, ../../../components/sass/_base.scss */
+/* line 101, ../../../components/sass/_base.scss */
 .wrapper {
   width: 100%;
   margin: 0 auto;
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 102, ../../../components/sass/_base.scss */
+  /* line 101, ../../../components/sass/_base.scss */
   .wrapper {
     width: 100%;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 102, ../../../components/sass/_base.scss */
+  /* line 101, ../../../components/sass/_base.scss */
   .wrapper {
     width: 100%;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 102, ../../../components/sass/_base.scss */
+  /* line 101, ../../../components/sass/_base.scss */
   .wrapper {
     width: 100%;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 102, ../../../components/sass/_base.scss */
+  /* line 101, ../../../components/sass/_base.scss */
   .wrapper {
     width: 85%;
   }
 }
 @media (min-width: 1024px) {
-  /* line 102, ../../../components/sass/_base.scss */
+  /* line 101, ../../../components/sass/_base.scss */
   .wrapper {
     width: 77%;
   }
 }
 
-/* line 130, ../../../components/sass/_base.scss */
+/* line 129, ../../../components/sass/_base.scss */
 h1 {
   font-size: 2em;
   font-weight: 900;
   padding: 15px 0;
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 130, ../../../components/sass/_base.scss */
+  /* line 129, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2em;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 130, ../../../components/sass/_base.scss */
+  /* line 129, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2em;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 130, ../../../components/sass/_base.scss */
+  /* line 129, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2.5em;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 130, ../../../components/sass/_base.scss */
+  /* line 129, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2.5em;
   }
 }
 @media (min-width: 1024px) {
-  /* line 130, ../../../components/sass/_base.scss */
+  /* line 129, ../../../components/sass/_base.scss */
   h1 {
     font-size: 3em;
   }
 }
 
-/* line 157, ../../../components/sass/_base.scss */
+/* line 156, ../../../components/sass/_base.scss */
 h2 {
   font-size: 1.250em;
   font-weight: 900;
 }
 
-/* line 163, ../../../components/sass/_base.scss */
+/* line 162, ../../../components/sass/_base.scss */
 p {
   font-size: 1em;
   line-height: 1.2em;
 }
 
-/* line 168, ../../../components/sass/_base.scss */
+/* line 167, ../../../components/sass/_base.scss */
 .img-responsive {
   display: block;
   max-width: 100%;
@@ -1783,7 +1783,7 @@ aside {
   display: block;
   width: 70%;
   padding: 25px 0;
-  margin-left: 32%;
+  margin-left: 38%;
 }
 @media (min-width: 220px) and (max-width: 319px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
@@ -1795,7 +1795,7 @@ aside {
 @media (min-width: 320px) and (max-width: 479px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
   .container-fluid .row header img {
-    width: 52%;
+    width: 50%;
     margin: 0 auto;
   }
 }
@@ -1809,27 +1809,27 @@ aside {
 @media (min-width: 600px) and (max-width: 839px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
   .container-fluid .row header img {
-    width: 24%;
+    width: 22%;
     margin: 0 auto;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
   .container-fluid .row header img {
-    width: 75%;
-    margin-left: 28%;
+    width: 68%;
+    margin-left: 31%;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
   .container-fluid .row header img {
-    width: 72%;
+    width: 60%;
   }
 }
 @media (min-width: 1024px) {
   /* line 40, ../../../components/sass/modules/aside.scss */
   .container-fluid .row header img {
-    width: 70%;
+    width: 60%;
   }
 }
 
@@ -1839,7 +1839,7 @@ aside {
   width: 100%;
   height: 50px;
 }
-/* line 88, ../../../components/sass/modules/aside.scss */
+/* line 89, ../../../components/sass/modules/aside.scss */
 .jobTitle p {
   color: #fdc20e;
   line-height: 50px;
@@ -1848,34 +1848,34 @@ aside {
   text-align: center;
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 88, ../../../components/sass/modules/aside.scss */
+  /* line 89, ../../../components/sass/modules/aside.scss */
   .jobTitle p {
     text-align: right;
     margin-right: 2%;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 88, ../../../components/sass/modules/aside.scss */
+  /* line 89, ../../../components/sass/modules/aside.scss */
   .jobTitle p {
     text-align: right;
     margin-right: 2%;
   }
 }
 @media (min-width: 1024px) {
-  /* line 88, ../../../components/sass/modules/aside.scss */
+  /* line 89, ../../../components/sass/modules/aside.scss */
   .jobTitle p {
     text-align: right;
     margin-right: 2%;
   }
 }
-/* line 126, ../../../components/sass/modules/aside.scss */
+/* line 127, ../../../components/sass/modules/aside.scss */
 .jobTitle p img {
   width: 17px;
   height: 17px;
   display: inline-block;
 }
 
-/* line 134, ../../../components/sass/modules/aside.scss */
+/* line 135, ../../../components/sass/modules/aside.scss */
 .expandButton {
   background: none;
   width: 50%;
@@ -1885,234 +1885,244 @@ aside {
   margin: 10px 0 15px 0;
   transition: all 0.3s ease;
 }
-/* line 143, ../../../components/sass/modules/aside.scss */
+/* line 144, ../../../components/sass/modules/aside.scss */
 .expandButton :hover {
   cursor: pointer;
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
 }
-/* line 150, ../../../components/sass/modules/aside.scss */
+/* line 151, ../../../components/sass/modules/aside.scss */
 .expandButton img {
   width: 20%;
 }
 @media (min-width: 320px) and (max-width: 479px) {
-  /* line 150, ../../../components/sass/modules/aside.scss */
+  /* line 151, ../../../components/sass/modules/aside.scss */
   .expandButton img {
     width: 20%;
   }
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 150, ../../../components/sass/modules/aside.scss */
+  /* line 151, ../../../components/sass/modules/aside.scss */
   .expandButton img {
     width: 20%;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 150, ../../../components/sass/modules/aside.scss */
+  /* line 151, ../../../components/sass/modules/aside.scss */
   .expandButton img {
     width: 20%;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 134, ../../../components/sass/modules/aside.scss */
+  /* line 135, ../../../components/sass/modules/aside.scss */
   .expandButton {
     display: none;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 134, ../../../components/sass/modules/aside.scss */
+  /* line 135, ../../../components/sass/modules/aside.scss */
   .expandButton {
     display: none;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 134, ../../../components/sass/modules/aside.scss */
+  /* line 135, ../../../components/sass/modules/aside.scss */
   .expandButton {
     display: none;
   }
 }
 @media (min-width: 1024px) {
-  /* line 134, ../../../components/sass/modules/aside.scss */
+  /* line 135, ../../../components/sass/modules/aside.scss */
   .expandButton {
     display: none;
   }
 }
 
-/* line 186, ../../../components/sass/modules/aside.scss */
+/* line 187, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical {
   display: block;
-  width: 94%;
+  width: 90%;
   margin: 0 auto;
 }
 @media (min-width: 220px) and (max-width: 319px) {
-  /* line 186, ../../../components/sass/modules/aside.scss */
+  /* line 187, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical {
     display: none;
   }
 }
 @media (min-width: 320px) and (max-width: 479px) {
-  /* line 186, ../../../components/sass/modules/aside.scss */
+  /* line 187, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical {
     display: none;
     width: 60%;
   }
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 186, ../../../components/sass/modules/aside.scss */
+  /* line 187, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical {
     display: none;
     width: 55%;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 186, ../../../components/sass/modules/aside.scss */
+  /* line 187, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical {
     display: none;
     width: 100%;
   }
 }
-/* line 210, ../../../components/sass/modules/aside.scss */
+/* line 211, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul {
   margin: 25px 0;
 }
-/* line 212, ../../../components/sass/modules/aside.scss */
+/* line 213, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul li {
   height: auto;
   margin-top: 15px;
 }
-/* line 215, ../../../components/sass/modules/aside.scss */
+/* line 216, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul li h2 {
   color: #fdc20e;
   margin-bottom: 10px;
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 215, ../../../components/sass/modules/aside.scss */
+  /* line 216, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical ul li h2 {
     margin-top: 0;
   }
 }
-/* line 222, ../../../components/sass/modules/aside.scss */
+/* line 223, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul li h2 img {
   margin-right: 50px;
 }
-/* line 226, ../../../components/sass/modules/aside.scss */
+/* line 227, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul li p {
   font-family: "Raleway", "arial", "san-serif";
 }
-/* line 228, ../../../components/sass/modules/aside.scss */
+/* line 229, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul li p i {
   font-weight: 900;
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 212, ../../../components/sass/modules/aside.scss */
+  /* line 213, ../../../components/sass/modules/aside.scss */
   .myDetailsVertical ul li {
     display: inline-block;
   }
 }
-/* line 238, ../../../components/sass/modules/aside.scss */
+/* line 239, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul .pc-skills-vertical h2 {
-  margin: 10px 0;
+  margin: 10px 0 10px 0;
   color: #fdc20e;
 }
 /* line 243, ../../../components/sass/modules/aside.scss */
+.myDetailsVertical ul .pc-skills-vertical ul {
+  margin: 0;
+}
+/* line 245, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul .pc-skills-vertical ul li {
   display: inline-block;
   width: 45px;
   height: 45px;
   margin: 5px;
 }
-/* line 250, ../../../components/sass/modules/aside.scss */
+/* line 252, ../../../components/sass/modules/aside.scss */
 .myDetailsVertical ul .pc-skills-vertical ul .no-margin {
   margin-right: 0;
 }
 
-/* line 260, ../../../components/sass/modules/aside.scss */
+/* line 262, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz {
   width: 90%;
   margin: 0 auto;
 }
 @media (min-width: 220px) and (max-width: 319px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
 @media (min-width: 320px) and (max-width: 479px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
 @media (min-width: 1024px) {
-  /* line 260, ../../../components/sass/modules/aside.scss */
+  /* line 262, ../../../components/sass/modules/aside.scss */
   .myDetailsHoriz {
     display: none;
   }
 }
-/* line 288, ../../../components/sass/modules/aside.scss */
+/* line 290, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz ul {
   margin: 25px auto;
   width: 90%;
 }
-/* line 292, ../../../components/sass/modules/aside.scss */
+/* line 294, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz ul li {
   display: inline-block;
   width: 240px;
   height: auto;
   margin: 5px;
 }
-/* line 297, ../../../components/sass/modules/aside.scss */
+/* line 299, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz ul li h2 {
   margin: 10px 0;
   color: #fdc20e;
 }
-/* line 301, ../../../components/sass/modules/aside.scss */
+/* line 303, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz ul li p {
   font-family: "Raleway", "arial", "san-serif";
 }
-/* line 303, ../../../components/sass/modules/aside.scss */
+/* line 305, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz ul li p i {
   font-weight: 900;
 }
-/* line 311, ../../../components/sass/modules/aside.scss */
+/* line 313, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz .pc-skills-horizontal h2 {
   margin: 10px 0;
   color: #fdc20e;
 }
-/* line 315, ../../../components/sass/modules/aside.scss */
+/* line 317, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz .pc-skills-horizontal ul {
   width: 90%;
 }
-/* line 317, ../../../components/sass/modules/aside.scss */
+/* line 319, ../../../components/sass/modules/aside.scss */
 .myDetailsHoriz .pc-skills-horizontal ul li {
   width: 50px;
 }
 
-/* line 324, ../../../components/sass/modules/aside.scss */
+/* line 326, ../../../components/sass/modules/aside.scss */
 .remove {
   margin: 0 0 0 -2000px;
 }
 
-/* line 329, ../../../components/sass/modules/aside.scss */
+/* line 331, ../../../components/sass/modules/aside.scss */
+.link-hover:hover {
+  color: #fdc20e;
+  -webkit-transition: all .5s ease;
+}
+
+/* line 337, ../../../components/sass/modules/aside.scss */
 .phoneIco,
 .emailIco,
 .addressIco,
@@ -2124,67 +2134,67 @@ aside {
   position: relative;
 }
 
-/* line 342, ../../../components/sass/modules/aside.scss */
+/* line 350, ../../../components/sass/modules/aside.scss */
 .emailIco {
   top: 2px;
   -webkit-transition: all .5s ease;
 }
 
-/* line 347, ../../../components/sass/modules/aside.scss */
+/* line 355, ../../../components/sass/modules/aside.scss */
 .emailIco:hover {
   -webkit-transform: translateX(10px);
   cursor: pointer;
 }
 
-/* line 353, ../../../components/sass/modules/aside.scss */
+/* line 361, ../../../components/sass/modules/aside.scss */
 .addressIco {
   left: 18px;
   top: 1px;
 }
 
-/* line 358, ../../../components/sass/modules/aside.scss */
+/* line 366, ../../../components/sass/modules/aside.scss */
 .portfolioIco {
   top: 3px;
   left: 23px;
 }
 
-/* line 363, ../../../components/sass/modules/aside.scss */
+/* line 371, ../../../components/sass/modules/aside.scss */
 .linkdenIco {
   left: 22px;
   top: 2px;
   -webkit-transition: all .5s ease;
 }
 
-/* line 369, ../../../components/sass/modules/aside.scss */
+/* line 377, ../../../components/sass/modules/aside.scss */
 .linkdenIco:hover {
   -webkit-transform: translateX(10px);
   cursor: pointer;
 }
 
-/* line 374, ../../../components/sass/modules/aside.scss */
+/* line 382, ../../../components/sass/modules/aside.scss */
 .languageIco {
   left: 28px;
   top: 3px;
 }
 
-/* line 379, ../../../components/sass/modules/aside.scss */
+/* line 387, ../../../components/sass/modules/aside.scss */
 .interestsIco {
   left: 10px;
   top: 3px;
 }
 
-/* line 384, ../../../components/sass/modules/aside.scss */
+/* line 392, ../../../components/sass/modules/aside.scss */
 .pcskillsIco {
   left: 18px;
   top: 3px;
 }
 
-/* line 391, ../../../components/sass/modules/aside.scss */
+/* line 399, ../../../components/sass/modules/aside.scss */
 .interest-bold {
   font-weight: 900;
 }
 
-/* line 395, ../../../components/sass/modules/aside.scss */
+/* line 403, ../../../components/sass/modules/aside.scss */
 .interest-thin {
   font-weight: 200;
 }
