--- a/css/style.css
+++ b/css/style.css
@@ -1090,7 +1090,7 @@
     margin-left: 0;
   }
 }
-/* line 5, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -1112,45 +1112,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../../Ruby22/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -1269,6 +1269,7 @@ a:hover {
 .wrapper {
   width: 100%;
   margin: 0 auto;
+  display: flex;
 }
 @media (min-width: 480px) and (max-width: 599px) {
   /* line 101, ../../../components/sass/_base.scss */
@@ -1301,56 +1302,56 @@ a:hover {
   }
 }
 
-/* line 129, ../../../components/sass/_base.scss */
+/* line 130, ../../../components/sass/_base.scss */
 h1 {
   font-size: 2em;
   font-weight: 900;
   padding: 15px 0;
 }
 @media (min-width: 480px) and (max-width: 599px) {
-  /* line 129, ../../../components/sass/_base.scss */
+  /* line 130, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2em;
   }
 }
 @media (min-width: 600px) and (max-width: 839px) {
-  /* line 129, ../../../components/sass/_base.scss */
+  /* line 130, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2em;
   }
 }
 @media (min-width: 840px) and (max-width: 959px) {
-  /* line 129, ../../../components/sass/_base.scss */
+  /* line 130, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2.5em;
   }
 }
 @media (min-width: 960px) and (max-width: 1023px) {
-  /* line 129, ../../../components/sass/_base.scss */
+  /* line 130, ../../../components/sass/_base.scss */
   h1 {
     font-size: 2.5em;
   }
 }
 @media (min-width: 1024px) {
-  /* line 129, ../../../components/sass/_base.scss */
+  /* line 130, ../../../components/sass/_base.scss */
   h1 {
     font-size: 3em;
   }
 }
 
-/* line 156, ../../../components/sass/_base.scss */
+/* line 157, ../../../components/sass/_base.scss */
 h2 {
   font-size: 1.250em;
   font-weight: 900;
 }
 
-/* line 162, ../../../components/sass/_base.scss */
+/* line 163, ../../../components/sass/_base.scss */
 p {
   font-size: 1em;
   line-height: 1.2em;
 }
 
-/* line 167, ../../../components/sass/_base.scss */
+/* line 168, ../../../components/sass/_base.scss */
 .img-responsive {
   display: block;
   max-width: 100%;
